# sunxi-tools

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README.md  configure  configure.ac  sunxi-tools.8  version-gen
build-aux/: version.mk
sunxi-baremetal/: Makefile.am  Makefile.in  configure  configure.ac  sunxi-baremetal.8  sunxi-baremetal.8.in
sunxi-bootinfo/: Makefile.am  Makefile.in  bootinfo.c  configure  configure.ac  sunxi-bootinfo.8
sunxi-fel/: Makefile.am  Makefile.in  configure  configure.ac  fel.c  sunxi-fel-gpio  sunxi-fel-gpio.8  sunxi-fel.8
sunxi-fexc/: Makefile.am  Makefile.in  common.c  common.h  configure  configure.ac  fexc.c  script.c  script_bin.c  script_fex.c  script_uboot.c  sunxi-bin2fex.8  sunxi-fex2bin.8  sunxi-fexc.8
sunxi-meminfo/: Makefile.am  Makefile.in  configure  configure.ac  sunxi-meminfo.8
sunxi-nand-part/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac  sunxi-nand-common.c  sunxi-nand-common.h  sunxi-nand-part.8  sunxi-nand-read.c  sunxi-nand-read.h  sunxi-nand-sun4i.c  sunxi-nand-sun4i.h  sunxi-nand-sun7i.c  sunxi-nand-sun7i.h  sunxi-nand-write.c  sunxi-nand-write.h  sunxi-nand.c  sunxi-nand.h
sunxi-phoenix_info/: Makefile.am  Makefile.in  configure  configure.ac  phoenix_info.c  sunxi-phoenix_info.8
sunxi-pio/: Makefile.am  Makefile.in  configure  configure.ac  pio.c  sunxi-pio.8
sunxi-script_extractor/: Makefile.am  Makefile.in  configure  configure.ac  sunxi-script_extractor.8
