AC_PREREQ([2.69])
AC_INIT([sunxi-fexc], [m4_esyscmd([../version-gen ../version])], [https://github.com/linux-sunxi/sunxi-tools])
AC_CONFIG_SRCDIR([fexc.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AM_INIT_AUTOMAKE([subdir-objects foreign])
AC_PROG_CC
AC_PROG_CC_STDC
AC_PROG_INSTALL
AC_PROG_LN_S

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
