bin_PROGRAMS = sunxi-nand-part
man_MANS = sunxi-nand-part.8
EXTRA_DIST = sunxi-nand-part.8
sunxi_nand_part_SOURCES = sunxi-nand.c sunxi-nand-common.c sunxi-nand-read.c sunxi-nand-sun4i.c sunxi-nand-sun7i.c sunxi-nand-write.c sunxi-nand-common.h sunxi-nand.h sunxi-nand-read.h sunxi-nand-sun4i.h sunxi-nand-sun7i.h sunxi-nand-write.h

BUILT_SOURCES = 
include ../build-aux/version.mk
