AC_PREREQ([2.69])
AC_INIT([sunxi-nand-part], [1.4], [https://github.com/linux-sunxi/sunxi-tools])
AC_CONFIG_SRCDIR([sunxi-nand.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AM_INIT_AUTOMAKE([subdir-objects foreign])
AC_PROG_CC
AC_PROG_CC_STDC
AC_PROG_INSTALL

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
