AC_PREREQ([2.69])
AC_INIT([sunxi-script_extractor], [1.4.3], [https://github.com/linux-sunxi/sunxi-tools])
AC_CONFIG_SRCDIR([script_extractor.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AM_INIT_AUTOMAKE([subdir-objects foreign])
AC_PROG_CC
AC_PROG_CC_STDC
AC_PROG_INSTALL

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
